made mobile responsive

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 <div class="header" id="myHeader">
   <h1>Pixelplay </h1>
   <p>Click on the buttons to change the grid view.</p>
-  <button class="btn active" onclick="one()">1</button>
-  <button class="btn" onclick="two()">2</button>
-  <button class="btn" onclick="four()">4</button>
+  <div class="button-group">
+            <button class="btn active" onclick="one()">1</button>
+            <button class="btn" onclick="two()">2</button>
+            <button class="btn" onclick="four()">4</button>
+  </div>
 </div>
 
 <!-- Section Part 1: Image Grid -->
